force-app/main/default/objects/Order_Line_Items__c/Order_Line_Items__c.object-meta.xml
<CustomObject>
    <label>Order Line Items</label>
    <nameField>
        <label>Order Line Items Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Order Line Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>