force-app/main/default/objects/Order_Line_Items__c/fields/Additional_Charges__c.field-meta.xml
<CustomField>
    <fullName>Additional_Charges__c</fullName>
    <formula>Orders__r.Additional_Charges__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Additional Charges</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>