force-app/main/default/objects/Order_Line_Items__c/fields/AusWalk_Misc_Charge__c.field-meta.xml
<CustomField>
    <fullName>AusWalk_Misc_Charge__c</fullName>
    <formula>Orders__r.AusWalk_Misc_Charge__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AusWalk Misc Charge</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>