force-app/main/default/objects/Order_Line_Items__c/fields/Departure_City__c.field-meta.xml
<CustomField>
    <fullName>Departure_City__c</fullName>
    <label>Departure City</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>State</valueSetName>
    </valueSet>
</CustomField>