force-app/main/default/objects/Order_Line_Items__c/fields/Total_Amount_Outstanding__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount_Outstanding__c</fullName>
    <formula>Total_Amount__c  - ( Total_Payment_Received__c + Total_Coupon_Amount__c + Total_Order_Discount__c) - Total_Refund_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Amount Outstanding</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>