force-app/main/default/objects/Order_Line_Items__c/recordTypes/New_OLI.recordType-meta.xml
<RecordType>
    <fullName>New_OLI</fullName>
    <active>true</active>
    <label>New OLI</label>
</RecordType>