force-app/main/default/objects/Order_Line_Items__c/recordTypes/Old_OLI.recordType-meta.xml
<RecordType>
    <fullName>Old_OLI</fullName>
    <active>false</active>
    <label>Old OLI</label>
</RecordType>